some error fixed on message delete

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <script src="scripts/controller/aboutController.js"></script>
     <script src="scripts/controller/unsubscribeController.js"></script>
     <script src="scripts/controller/routes.js"></script>
-    <script type="text/javascript" src="scripts/controller/authDelete.js"></script>
+    <script type="text/javascript" src="scripts/controller/auth&delete.js"></script>
     <script type="text/javascript" src="scripts/controller/auth.js"></script>
     <script type="text/javascript" src="scripts/controller/userOutput.js"></script>
 
