delete button deactivation proccess

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <script type="text/javascript" src="scripts/model/listMessage.js"></script>
     <script type="text/javascript" src="scripts/model/listMessageDelete.js"></script>
     <!-- //CONTROLLER FILES// -->
+    <script src="scripts/controller/profile.js"></script>
     <script src="scripts/controller/homeController.js"></script>
     <script src="scripts/controller/aboutController.js"></script>
     <script src="scripts/controller/unsubscribeController.js"></script>
