no of emails is been counted for each mail

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>{{senderName}}</p>
           </div>
           <div class="unsub-container">
-           <button id="{{sender}}" class="delete" onclick="authDelete.handleAuthClick(this)">Delete</button>
+           <button id="{{sender}}" class="delete" onclick="authDelete.handleAuthClick(this)"> Delete </button>
             <a href="{{unsubscribe}}" target="_blank">Unsubscribe</a>
           </div>
         </div>
@@ -114,9 +114,9 @@
     <script src="vendor/scripts/html5sql.js"></script>
     <script src="vendor/scripts/webdb.js"></script>
     <!-- //MODEL FILES// -->
-    <script src="scripts/model/emailsNo.js"></script>
-    <script src="scripts/model/table.js"></script>
-    <script src="scripts/model/senderIdsTable.js"></script>
+    <script type="text/javascript" src="scripts/model/emailsNo.js"></script>
+    <script type="text/javascript" src="scripts/model/table.js"></script>
+    <script type="text/javascript" src="scripts/model/senderIdsTable.js"></script>
     <script type="text/javascript" src="scripts/model/getMessage.js"></script>
     <script type="text/javascript" src="scripts/model/listMessage.js"></script>
     <script type="text/javascript" src="scripts/model/listMessageDelete.js"></script>
