--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <section id="unsubscribe-page" class="tab-content">
           <div id="profile">
-            <div id="number"><div>0</div></div>
+            <div id="number">0</div>
             <p>Unique sender.</p>
             <img id="profile-image">
           </div>
