--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <!-- //FOOTER// -->
 
       <footer>
-        <h3>&#169 2016 Inbox Health Inc. All rights reserved.</h3>
+        <!-- <h3>&#169 2016 Inbox Health Inc. All rights reserved.</h3> -->
       </footer>
     </div>
 
