added home page information

--- a/index.html
+++ b/index.html
@@ -49,9 +49,27 @@
           <div class="containerBox">
             <div class="text-box">
               <h1>WELCOME TO INBOX HEALTH</h1>
-              <h3 class="full-nav">Less stress. More room. Unsubscribe instantly from junk mail.</h3>
+              <h3 class="full-nav">Less stress. More room. Unsubscribe and Delete instantly from junk mail.</h3>
               <div id="authorize-div"><a href="/unsubscribe"><button id="authorize-button" onclick="auth.handleAuthClick(event)">GET YOUR EMAILS</button></a></div>
             </div>
+          </div>
+          <svg viewBox="0 0 1280 70" preserveAspectRatio="none" id="headerCurve">
+            <polygon points="1280 0 1280 70 0 70" fill="rgb(147,147,147)"></polygon>
+          </svg>
+          <div class="containerBox2">
+            <h1>Focus on what matters</h1>
+            <h2>
+              <span>Inbox-Health Unsubscribe you from junk emails and delete all emails in single click.
+                <br>
+              </span>
+              <span> And gives totally new clean inbox.
+                <br>
+              </span>
+            </h2>
+            <img src="img/snip.jpg">
+            <svg viewBox="0 0 1280 70" preserveAspectRatio="none" id="headerCurve">
+              <polygon points="1280 0 1280 70 0 70" fill="rgb(0,0,0)"></polygon>
+            </svg>
           </div>
         </section>
 
