--- a/index.html
+++ b/index.html
@@ -46,33 +46,34 @@
 
       <main class="flex-content-wrapper">
         <section id="home-content" class="tab-content">
-          <div class="containerBox">
+          <div class="containerBox" >
             <div class="text-box">
               <h1>WELCOME TO INBOX HEALTH</h1>
               <h3 class="full-nav">Less stress. More room. Unsubscribe and Delete instantly from junk mail.</h3>
               <div id="authorize-div"><a href="/unsubscribe"><button id="authorize-button" onclick="auth.handleAuthClick(event)">GET YOUR EMAILS</button></a></div>
             </div>
           </div>
-          <svg viewBox="0 0 1280 70" preserveAspectRatio="none" id="headerCurve">
-            <polygon points="1280 0 1280 70 0 70" fill="rgb(147,147,147)"></polygon>
+        </section>
+        <section id="home-info" class="tab-content">
+          <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve">
+           <polygon points="1280 0 1280 70 0 70" fill="rgb(147,147,147)"></polygon>
           </svg>
           <div class="containerBox2">
-            <h1>Focus on what matters</h1>
-            <h2>
-              <span>Inbox-Health Unsubscribe you from junk emails and delete all emails in single click.
-                <br>
-              </span>
-              <span> And gives totally new clean inbox.
-                <br>
-              </span>
-            </h2>
-            <img src="img/snip.jpg">
-            <svg viewBox="0 0 1280 70" preserveAspectRatio="none" id="headerCurve">
-              <polygon points="1280 0 1280 70 0 70" fill="rgb(0,0,0)"></polygon>
-            </svg>
+           <h1>Focus on what matters</h1>
+           <h2>
+            <span>Inbox-Health Unsubscribe you from junk emails and delete all emails in single click.
+             <br>
+            </span>
+            <span> Totally new clean inbox.
+             <br>
+            </span>
+           </h2>
+           <img src="img/snip.jpg">
+           <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve">
+            <polygon points="1280 0 1280 70 0 70" fill="rgb(0,0,0)"></polygon>
+           </svg>
           </div>
-        </section>
-
+       </section>
   <!-- //UNSUBSCRIBE PAGE// -->
 
         <section id="unsubscribe-page" class="tab-content">
