--- a/index.html
+++ b/index.html
@@ -53,27 +53,27 @@
               <div id="authorize-div"><a href="/unsubscribe"><button id="authorize-button" onclick="auth.handleAuthClick(event)">GET YOUR EMAILS</button></a></div>
             </div>
           </div>
-        </section>
-        <section id="home-info" class="tab-content">
-          <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve">
-           <polygon points="1280 0 1280 70 0 70" fill="rgb(147,147,147)"></polygon>
-          </svg>
-          <div class="containerBox2">
-           <h1>Focus on what matters</h1>
-           <h2>
-            <span>Inbox-Health Unsubscribe you from junk emails and delete all emails in single click.
-             <br>
-            </span>
-            <span> Totally new clean inbox.
-             <br>
-            </span>
-           </h2>
-           <img src="img/snip.jpg">
+          <section id="home-info" class="tab-content">
            <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve">
-            <polygon points="1280 0 1280 70 0 70" fill="rgb(0,0,0)"></polygon>
+            <polygon points="1280 0 1280 70 0 70" fill="rgb(147,147,147)"></polygon>
            </svg>
-          </div>
-       </section>
+           <div class="containerBox2">
+            <h1>Focus on what matters</h1>
+            <h2>
+             <span>Inbox-Health Unsubscribe you from junk emails and delete all emails in single click.
+              <br>
+             </span>
+             <span> Totally new clean inbox.
+              <br>
+             </span>
+            </h2>
+            <img src="img/snip.jpg">
+            <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve">
+             <polygon points="1280 0 1280 70 0 70" fill="rgb(0,0,0)"></polygon>
+            </svg>
+           </div>
+          </section>
+        </section>
   <!-- //UNSUBSCRIBE PAGE// -->
 
         <section id="unsubscribe-page" class="tab-content">
@@ -81,6 +81,7 @@
             <div id="number">0</div>
             <p>Unique sender.</p>
             <img id="profile-image">
+            <li id="profile-name"></li>
           </div>
           <ul></ul>
         </section>
