--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
              <div class="containerBox2">
               <h1>Focus on what matters</h1>
               <h2>
-               <span>Inbox-Health Unsubscribe you from junk emails and delete all emails in single click.
+               <span>Unsubscribe from junk emails.
+                <br>
+                <span>Delete all emails in a single click.
                 <br>
                </span>
                <span> Totally new clean inbox.
