--- a/index.html
+++ b/index.html
@@ -108,17 +108,16 @@
                   <div class="front face">
                    <img src="img/raeh-bio.jpg">
                   </div>
-                  <div class="back face center" style="background-color: #767674;">
+                  <div class="back face center" style="background-color: #21211f;">
                    <div class="icons">
-                    <i class="fa fa-github-square fa-3x" aria-hidden="true"></i>
-                    <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
+                    <a href="https://github.com/rahelsel" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/rae-helsel" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
-                   <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg);">)</i>
+                   <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
                  </div>
                 </div>
                 <p>Rae Helsel grew up in Wenatchee, WA, but calls Seattle home. She started intro web design classes in her graduate degree for photography, and then decided to pursue it more thoroughly with Code Fellows in August, 2016. All her spare time includes yoga, coffee, and music.</p>
-                <!-- <img src="img/raeh-bio.jpg"> -->
               </div>
               <div class="student">
                 <h3>Bhavya B.</h3>
@@ -129,10 +128,10 @@
                   </div>
                   <div class="back face center" style="background-color:#94c8d3;">
                      <div class="icons">
-                      <i class="fa fa-github-square fa-3x" aria-hidden="true"></i>
-                      <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
+                      <a href="https://github.com/bhavyaab" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                      <a href="https://www.linkedin.com/in/bhavyabharti" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                      </div>
-                     <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg);">)</i>
+                     <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
                  </div>
                 </div>
@@ -147,10 +146,10 @@
                   </div>
                   <div class="back face center" style="background-color: #ba864c;">
                    <div class="icons">
-                    <i class="fa fa-github-square fa-3x" aria-hidden="true"></i>
-                    <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
+                    <a href="https://github.com/BatemanVO" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/steven-bateman-012b8a127" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
-                   <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg);">)</i>
+                   <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
                  </div>
                 </div>
@@ -165,10 +164,10 @@
                   </div>
                   <div class="back face center" style="background-color: #8a685c;">
                    <div class="icons">
-                    <i class="fa fa-github-square fa-3x" aria-hidden="true"></i>
-                    <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
+                    <a href="https://github.com/ackenepah" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/adrian-kenepah-martin-515a1251" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
-                   <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg);">)</i>
+                   <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
                  </div>
                 </div>
