--- a/index.html
+++ b/index.html
@@ -47,35 +47,12 @@
 
       <main class="flex-content-wrapper">
         <section id="home-content" class="tab-content">
-         <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve">
-          <polygon points="1280 0 1280 70 0 70" fill="rgb(147,147,147)"></polygon>
-         </svg>
           <div class="containerBox">
-            <div class="text-box" id="slide">
+            <div class="text-box">
               <h1>WELCOME TO INBOX HEALTH</h1>
               <h3 class="full-nav">Less stress. More room. Unsubscribe and Delete instantly from junk mail.</h3>
               <div id="authorize-div"><a href="/unsubscribe"><button id="authorize-button" onclick="auth.handleAuthClick(event)">GET YOUR EMAILS</button></a></div>
             </div>
-            <section id="home-info">
-             <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve">
-              <polygon points="1280 0 1280 70 0 70" fill="rgb(68,68,68)"></polygon>
-             </svg>
-             <div class="containerBox2">
-              <h1>Focus on what matters</h1>
-              <h2>
-               <span>Unsubscribe your self from junk emails
-                <br>
-               </span>
-               <span> Totally new clean inbox.
-                <br>
-               </span>
-              </h2>
-              <img src="img/snip.jpg">
-              <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve">
-               <polygon points="1280 0 1280 70 0 70" fill="rgb(0,0,0)"></polygon>
-              </svg>
-             </div>
-            </section>
           </div>
         </section>
   <!-- //UNSUBSCRIBE PAGE// -->
@@ -110,8 +87,8 @@
                   </div>
                   <div class="back face center" style="background-color: #21211f;">
                    <div class="icons">
-                    <a href="https://github.com/rahelsel" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/in/rae-helsel" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://github.com/" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
                    <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
@@ -128,8 +105,8 @@
                   </div>
                   <div class="back face center" style="background-color:#94c8d3;">
                      <div class="icons">
-                      <a href="https://github.com/bhavyaab" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-                      <a href="https://www.linkedin.com/in/bhavyabharti" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                      <a href="https://github.com/" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                      <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                      </div>
                      <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
@@ -146,8 +123,8 @@
                   </div>
                   <div class="back face center" style="background-color: #ba864c;">
                    <div class="icons">
-                    <a href="https://github.com/BatemanVO" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/in/steven-bateman-012b8a127" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://github.com/" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
                    <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
@@ -164,8 +141,8 @@
                   </div>
                   <div class="back face center" style="background-color: #8a685c;">
                    <div class="icons">
-                    <a href="https://github.com/ackenepah" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/in/adrian-kenepah-martin-515a1251" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://github.com/" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
                    <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
