--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
 
       <main class="flex-content-wrapper">
         <section id="home-content" class="tab-content">
-         <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve">
-          <polygon points="1280 0 1280 70 0 70" fill="rgb(147,147,147)"></polygon>
-         </svg>
           <div class="containerBox">
             <div class="text-box" id="slide">
               <h1>WELCOME TO INBOX HEALTH</h1>
@@ -57,9 +54,6 @@
               <div id="authorize-div"><a href="/unsubscribe"><button id="authorize-button" onclick="auth.handleAuthClick(event)">GET YOUR EMAILS</button></a></div>
             </div>
             <section id="home-info">
-             <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve">
-              <polygon points="1280 0 1280 70 0 70" fill="rgb(68,68,68)"></polygon>
-             </svg>
              <div class="containerBox2">
               <h1>Focus on what matters</h1>
               <h2>
@@ -104,7 +98,7 @@
               <div class="student">
                 <h3>Rae H.</h3>
                 <div class="f1_container">
-                 <div class="f1_card" class="shadow">
+                 <div class="f1_card" >
                   <div class="front face">
                    <img src="img/raeh-bio.jpg">
                   </div>
@@ -122,7 +116,7 @@
               <div class="student">
                 <h3>Bhavya B.</h3>
                 <div class="f1_container">
-                 <div class="f1_card" class="shadow">
+                 <div class="f1_card" >
                   <div class="front face">
                    <img src="img/bhavyab-bio.jpg">
                   </div>
@@ -140,7 +134,7 @@
               <div class="student">
                 <h3>Steven B.</h3>
                 <div class="f1_container">
-                 <div class="f1_card" class="shadow">
+                 <div class="f1_card" >
                   <div class="front face">
                    <img src="img/stevenb-bio.png">
                   </div>
@@ -158,7 +152,7 @@
               <div class="student">
                 <h3>Adrian M.</h3>
                 <div class="f1_container">
-                 <div class="f1_card" class="shadow">
+                 <div class="f1_card" >
                   <div class="front face">
                    <img src="img/adrianm-bio.jpg">
                   </div>
@@ -181,7 +175,7 @@
   <!-- //FOOTER// -->
 
       <footer>
-        <h3>&#169 2016 Inbox Health Inc. All rights reserved.</h3>
+        <h3><li>&</li>#169 2016 Inbox Health Inc. All rights reserved.</h3>
       </footer>
     </div>
 
