--- a/index.html
+++ b/index.html
@@ -51,26 +51,26 @@
             <div class="text-box" id="slide">
               <h1>WELCOME TO INBOX HEALTH</h1>
               <h3 class="full-nav">Less stress. More room. Unsubscribe and Delete instantly from junk mail.</h3>
-              <div id="authorize-div"><a href="/unsubscribe"><button id="authorize-button" onclick="auth.handleAuthClick(event)">GET YOUR EMAILS</button></a></div>
+              <div id="authorize-div"><a href="/unsubscribe"><button id="authorize-button" onclick="auth.handleAuthClick(event)">GET YOUR EMAILS</button></a>
+              </div>
             </div>
-            <section id="home-info">
-             <div class="containerBox2">
-              <h1>Focus on what matters</h1>
-              <h2>
-               <span>Unsubscribe your self from junk emails
-                <br>
-               </span>
-               <span> Totally new clean inbox.
-                <br>
-               </span>
-              </h2>
-              <img src="img/snip.jpg">
-              <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve">
-               <polygon points="1280 0 1280 70 0 70" fill="rgb(0,0,0)"></polygon>
-              </svg>
-             </div>
-            </section>
           </div>
+        </section>
+        <section id="home-info">
+         <div class="containerBox2">
+           <h1>Focus on what matters</h1>
+           <h2>
+             <span>Unsubscribe your self from junk emails
+              <br>
+             </span>
+             <span> Totally new clean inbox.
+              <br>
+             </span>
+           </h2>
+           <img src="img/snip.jpg">
+         <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve"><polygon points="1280 0 1280 70 0 70" fill="rgb(0,0,0)"></polygon>
+         </svg>
+         </div>
         </section>
   <!-- //UNSUBSCRIBE PAGE// -->
 
@@ -175,9 +175,9 @@
   <!-- //FOOTER// -->
 
       <footer>
-        <h3><li>&</li>#169 2016 Inbox Health Inc. All rights reserved.</h3>
+        <h3>&#169 2016 Inbox Health Inc. All rights reserved.</h3>
+        <!-- <h3>hello I am footer!!</h3> -->
       </footer>
-    </div>
 
   <!-- //VENDOR FILES// -->
 
