--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
           </div>
         </section>
-        <section id="home-info">
+        <section id="home-info" class="tab-content">
          <div class="containerBox2">
            <h1>Focus on what matters</h1>
            <h2>
@@ -68,8 +68,8 @@
              </span>
            </h2>
            <img src="img/snip.jpg">
-         <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve"><polygon points="1280 0 1280 70 0 70" fill="rgb(0,0,0)"></polygon>
-         </svg>
+           <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve"><polygon points="1280 0 1280 70 0 70" fill="rgb(0,0,0)"></polygon>
+           </svg>
          </div>
         </section>
   <!-- //UNSUBSCRIBE PAGE// -->
