--- a/index.html
+++ b/index.html
@@ -58,22 +58,6 @@
             </div>
           </div>
         </section>
-        <section id="home-info" class="tab-content">
-         <div class="containerBox2">
-           <h1>Focus on what matters</h1>
-           <h2>
-             <span>Unsubscribe your self from junk emails
-              <br>
-             </span>
-             <span> Totally new clean inbox.
-              <br>
-             </span>
-           </h2>
-           <img src="img/snip.jpg">
-           <svg viewbox="0 0 1280 70" preserveaspectratio="none" class="headerCurve"><polygon points="1280 0 1280 70 0 70" fill="rgb(0,0,0)"></polygon>
-           </svg>
-         </div>
-        </section>
   <!-- //UNSUBSCRIBE PAGE// -->
 
         <section id="unsubscribe-page" class="tab-content">
@@ -200,6 +184,7 @@
     <script type="text/javascript" src="scripts/model/listMessage.js"></script>
     <script type="text/javascript" src="scripts/model/listMessageDelete.js"></script>
     <!-- //CONTROLLER FILES// -->
+    <script type="text/javascript" src="scripts/controller/wentWrong.js"></script>
     <script type="text/javascript" src="scripts/controller/confirmAlert.js"></script>
     <script type="text/javascript" src="scripts/controller/deleteBatch.js"></script>
     <script type="text/javascript" src="scripts/controller/profile.js"></script>
