insert sentence fixed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
           </ul>
         </nav>
       </header>
-
     <!-- //CONTENT// -->
 
       <main class="flex-content-wrapper">
@@ -157,7 +156,7 @@
           </section>
         </div>
       </main>
-
+    </div>
   <!-- //FOOTER// -->
 
       <footer>
