email address fix

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
          <div class="row">
           <hr width= "30%" color="#333">
            <div class="left"><img src="img/1.png"></div>
-           <div class="right"><h3>Unique senders</h3><p>Inbox Health safely sniffs through the emails in your inbox and exposes the emails that are possibily subscribed. Every unique sender is identified and listed at once in order to shortlist all senders so you can easily make design on them.</p></div>
+           <div class="right"><h3>Unique senders</h3><p>Inbox Health safely sniffs through the emails in your inbox and exposes the emails that are subscribed. Every unique sender is identified and listed at once in order to shortlist all senders, so you can easily make know and make design on them.</p></div>
          </div>
          <div class="row">
           <hr width= "30%" color="#333">
@@ -74,7 +74,7 @@
           <hr width= "30%" color="#333">
            <div class="right">
             <h3>Contact Us</h3>
-           <p style="padding-bottom: 10px;">Share us on Twitter linkedin and Facebook. If you run into any problems, please feel free to send us an email <a href="mailto:bhavyamacet@gmailcom?Subject=Inbox-Health%20User%20Experiance%20Feedback" target="_top">@Inbox-Health</a></p>
+           <p style="padding-bottom: 10px;">Share us on Twitter linkedin and Facebook. If you run into any problems, please feel free to send us an email <a href="mailto:inboxhealth2016@gmail.com?Subject=Inbox-Health%20User%20Experiance%20Feedback" target="_top">@Inbox-Health</a></p>
             <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
             <script type="text/javascript" src="http://platform.linkedin.com/in.js"></script><script type="in/share"></script>
             <iframe src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Finbox-health.herokuapp.com%2F&layout=button&size=small&mobile_iframe=true&width=58&height=20&appId" width="58" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
