--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
          </div>
          <div class="contact">
           <hr width= "30%" color="#333">
-          <div class="left" style="height:30vh; width:100%; padding: 20px;">
+          <div style="width:100%; padding: 20px;">
            <h3 style="text-align:center;">Disclaimer</h3>
            <p style="text-align:center;padding: 10px;">inbox-health  does not store, transfer, transmit or save any of your data.</p>
           </div>
           <hr width= "30%" color="#333">
-          <div class="left" style="height:20vh; width:100%; padding: 20px;">
+          <div style="height:20vh; width:100%; padding: 20px;">
              <p style="text-align:center;padding: 10px;">&#169 2016 Inbox Health Inc. All rights reserved.</p>
           </div>
          </div>
