--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
             <script type="text/javascript" src="http://platform.linkedin.com/in.js"></script><script type="in/share"></script>
             <iframe src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Finbox-health.herokuapp.com%2F&layout=button&size=small&mobile_iframe=true&width=58&height=20&appId" width="58" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+            <a class="slack-button-widget" data-source="http://slackbutton.herokuapp.com/embed" href="http://slackbutton.herokuapp.com/post/new" target="_blank">Post to Slack</a>
+
            </div>
            <div class="left">
             <img src="img/share.jpg">
@@ -207,6 +209,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
+    <script src="http://slackbutton.herokuapp.com/widget.js" type="text/javascript"></script>
     <script src="vendor/scripts/sweetalert.min.js"></script>
     <script src="vendor/scripts/page.js"></script>
     <script src="vendor/scripts/html5sql.js"></script>
