--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
         </section>
         <section id="home-info" class="tab-content">
          <div class="row">
-          <hr width= "30%" color="#333">
+          <hr width= "30%" >
            <div class="left"><img src="img/1.png"></div>
            <div class="right"><h3>Unique senders</h3><p>Inbox Health safely sniffs through the emails in your inbox and exposes the emails that are subscribed. Every unique sender is identified and listed at once in order to shortlist all senders, so you can easily make know and make design on them.</p></div>
          </div>
          <div class="row">
-          <hr width= "30%" color="#333">
+          <hr width= "30%" >
            <div class="left"><h3>Unsubscribe or Delete</h3><p>Once you've login with gmail, you have all list of unique senders and with each sender it shows numbers of email you have from that unique sender. You can easily delete all emails in a single click from here. Unsubscribe by clicking Unsubscribe.</p></div>
            <div class="right">
             <img src="img/2.png">
            </div>
          </div>
          <div class="row">
-          <hr width= "30%" color="#333">
+          <hr width= "30%" >
            <div class="right">
             <h3>Contact Us</h3>
            <p style="padding-bottom: 10px;">Share us on Twitter linkedin and Facebook. If you run into any problems, please feel free to send us an email <a href="mailto:inboxhealth2016@gmail.com?Subject=Inbox-Health%20User%20Experiance%20Feedback" target="_top">@Inbox-Health</a></p>
@@ -87,12 +87,12 @@
            </div>
          </div>
          <div class="contact">
-          <hr width= "30%" color="#333">
+          <hr width= "30%" >
           <div style="width:100%; padding: 20px;">
            <h3 style="text-align:center;">Disclaimer</h3>
            <p style="text-align:center;padding: 10px;">inbox-health  does not store, transfer, transmit or save any of your data.</p>
           </div>
-          <hr width= "30%" color="#333">
+          <hr width= "30%" >
           <div style="height:20vh; width:100%; padding: 20px;">
              <p style="text-align:center;padding: 10px;">&#169 2016 Inbox Health Inc. All rights reserved.</p>
           </div>
