--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
            </div>
            <div class="left">
-            <img src="img/share.jpg">
+            <img src="img/share.png">
            </div>
          </div>
          <div class="contact">
