--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                   </div>
                   <div class="back face center" style="background-color: #21211f;">
                    <div class="icons">
-                    <a href="https://github.com/" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://github.com/bhavyaab/inbox-health" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/rae-helsel" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
                    <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
@@ -142,8 +142,8 @@
                   </div>
                   <div class="back face center" style="background-color:#94c8d3;">
                      <div class="icons">
-                      <a href="https://github.com/" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-                      <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                      <a href="https://github.com/bhavyaab/inbox-health" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                      <a href="https://www.linkedin.com/in/bhavyabharti" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                      </div>
                      <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
@@ -160,8 +160,8 @@
                   </div>
                   <div class="back face center" style="background-color: #ba864c;">
                    <div class="icons">
-                    <a href="https://github.com/" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://github.com/bhavyaab/inbox-health" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/steven-bateman-012b8a127" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
                    <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
@@ -178,8 +178,8 @@
                   </div>
                   <div class="back face center" style="background-color: #8a685c;">
                    <div class="icons">
-                    <a href="https://github.com/" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://github.com/bhavyaab/inbox-health" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/adrian-kenepah-martin-515a1251" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
                    <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
                   </div>
