profile name removed

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div id="number">0</div>
             <p>Unique sender.</p>
             <img id="profile-image">
-            <li id="profile-name"></li>
+            <!-- <li id="profile-name"></li> -->
           </div>
           <ul></ul>
         </section>
