--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         <section id="unsubscribe-page" class="tab-content">
           <div id="profile">
             <div id="number">0</div>
-            <p>Unique sender.</p>
+            <p>Unique senders</p>
             <img id="profile-image">
-            <!-- <li id="profile-name"></li> -->
+            <li id="profile-name"></li>
           </div>
           <ul></ul>
         </section>
