profile info display fix

--- a/index.html
+++ b/index.html
@@ -96,10 +96,14 @@
 
         <section id="unsubscribe-page" class="tab-content">
           <div id="profile">
-            <div id="number">0</div>
-            <p>Unique senders</p>
-            <img id="profile-image">
-            <li id="profile-name"></li>
+            <span>
+              <img id="profile-image">
+              <li id="profile-name"></li>
+            </span>
+            <span>
+              <span id="number">0</span>
+              <span id="li">Unique sender</span>
+          </span>
           </div>
           <ul></ul>
         </section>
