--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
   <!-- //FOOTER// -->
   <hr width= "30%" >
   <div style="height:20vh; width:100%; padding: 20px;">
+    <div style="text-align:center;margin-bottom: 10px">
+      <spam style="font-weight:bold"><a href="/" id="home-click">Home</a></spam>|<spam style="font-weight:bold"><a href="/about">About</a></spam>
+    </div>
      <p style="text-align:center;padding: 10px;">&#169 2016 Inbox Health Inc. All rights reserved.</p>
   </div>
 
