unsubscribe in footer

--- a/index.html
+++ b/index.html
@@ -198,8 +198,10 @@
   <!-- //FOOTER// -->
   <hr width= "30%" >
   <div style="height:20vh; width:100%; padding: 20px;">
-    <div style="text-align:center;margin-bottom: 10px">
-      <spam style="font-weight:bold"><a href="/" id="home-click">Home</a></spam>|<spam style="font-weight:bold"><a href="/about">About</a></spam>
+    <div style="text-align:center;margin-bottom: 10px;font-weight:bold">
+      <a href="/" id="home-click">Home</a> |
+      <a style="display:none" id="unsubscribeFooter" href="/unsubscribe">Unsubscribe | </a> 
+      <a href="/about">About</a>
     </div>
      <p style="text-align:center;padding: 10px;">&#169 2016 Inbox Health Inc. All rights reserved.</p>
   </div>
