--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -200,7 +200,7 @@
   <div style="height:20vh; width:100%; padding: 20px;">
     <div style="text-align:center;margin-bottom: 10px;font-weight:bold">
       <a href="/" id="home-click">Home</a> |
-      <a style="display:none" id="unsubscribeFooter" href="/unsubscribe">Unsubscribe | </a> 
+      <a style="display:none" id="unsubscribeFooter" href="/unsubscribe">Unsubscribe | </a>
       <a href="/about">About</a>
     </div>
      <p style="text-align:center;padding: 10px;">&#169 2016 Inbox Health Inc. All rights reserved.</p>
