png changed to svg

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="flex-site-wrapper">
       <header>
         <div id="logos">
-          <a href="/"><img src="img/fullLogo.png" id="fullLogo"></a>
-          <a href="/"><img src="img/mobile.png" id="mobileLogo"></a>
+          <a href="/"><img src="img/fullLogo.svg" id="fullLogo"></a>
+          <a href="/"><img src="img/mobile.svg" id="mobileLogo"></a>
         </div>
         <nav>
           <ul id="main-nav">
