Edited Github links to correct profiles

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   </div>
                   <div class="back face center" style="background-color: #21211f;">
                    <div class="icons">
-                    <a href="https://github.com/bhavyaab/inbox-health" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://github.com/rahelsel" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
                     <a href="https://www.linkedin.com/in/rae-helsel" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
                    <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
@@ -163,7 +163,7 @@
                   </div>
                   <div class="back face center" style="background-color: #ba864c;">
                    <div class="icons">
-                    <a href="https://github.com/bhavyaab/inbox-health" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://github.com/batemanvo" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
                     <a href="https://www.linkedin.com/in/steven-bateman-012b8a127" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
                    <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
@@ -181,7 +181,7 @@
                   </div>
                   <div class="back face center" style="background-color: #8a685c;">
                    <div class="icons">
-                    <a href="https://github.com/bhavyaab/inbox-health" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://github.com/ackenepah" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
                     <a href="https://www.linkedin.com/in/adrian-kenepah-martin-515a1251" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                    </div>
                    <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
