correct profile link fix

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   </div>
                   <div class="back face center" style="background-color:#94c8d3;">
                      <div class="icons">
-                      <a href="https://github.com/bhavyaab/inbox-health" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                      <a href="https://github.com/bhavyaab" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
                       <a href="https://www.linkedin.com/in/bhavyabharti" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                      </div>
                      <i class="fa fa-3x" aria-hidden="true" style="transform: rotate(90deg); margin-left: 0.2em;">)</i>
