--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -236,6 +236,7 @@
     <script type="text/javascript" src="scripts/controller/routes.js"></script>
     <script type="text/javascript" src="scripts/controller/auth.js"></script>
     <script type="text/javascript" src="scripts/controller/userOutput.js"></script>
+    <script type="text/javascript" src="scripts/controller/onload.js"></script>
 
   <!-- //VIEW FILES// -->
     <script type="text/javascript" src="scripts/view/animation.js"></script>
