gmail push notification addition

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html5>
 <html>
   <head>
+    <meta name="google-site-verification" content="_J0-Ztgaq5flXMtxajL3mb8iTwoX8INz9UuoQEDht28" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="vendor/styles/reset.css" rel="stylesheet">
     <link href="vendor/styles/icons.css" rel="stylesheet">
@@ -232,6 +233,7 @@
     <script type="text/javascript" src="scripts/controller/profile.js"></script>
     <script type="text/javascript" src="scripts/controller/homeController.js"></script>
     <script type="text/javascript" src="scripts/controller/aboutController.js"></script>
+    <script type="text/javascript" src="scripts/controller/watchGmail.js"></script>
     <script type="text/javascript" src="scripts/controller/unsubscribeController.js"></script>
     <script type="text/javascript" src="scripts/controller/routes.js"></script>
     <script type="text/javascript" src="scripts/controller/auth.js"></script>
