--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           <div style="width:100%; padding: 20px;">
            <h3 style="text-align:center;">Disclaimer</h3>
            <p style="text-align:center;padding: 10px;">inbox-health  does not store, transfer, transmit or save any of your data.</p>
+           <a style="text-align:center;padding: 10px;text-decoration: none;" href="pages/PrivacyPolicy.html">Privacy Policy</a>
           </div>
          </div>
         </section>
